--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
 .info {
-  background-image: url(assets/backgrounds/h_img.jpg);
+  background-image: url(backgrounds/h_img.jpg);
+  background-size: cover;
 }
