--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .info {
   background-image: url(backgrounds/h_img.jpg);
   background-size: cover;
+  text-align: center;
 }
 .info h1 {
   color: white;
