--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
   background-image: url(backgrounds/h_img.jpg);
   background-size: cover;
   text-align: center;
+  padding-top: 17%;
+  padding-bottom: 15%;
 }
 .info h1 {
   color: white;
