--- a/css/styles.css
+++ b/css/styles.css
@@ -44,4 +44,18 @@
 }
 .contact {
   background-image: url(backgrounds/c_image.jpg);
+  text-align: center;
+  align-content: center;
+}
+.contact {
+  color: white;
+  background-size: cover;
+  align-self: center;
+}
+input[type=text],input[type=email],#comment{
+  background: transparent;
+  color: white;
+  font-size: 20px;
+  font-family: 'Copse', serif;
+  align-self: center;
 }
