--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,18 @@ input[type=text],input[type=email],#comment{
   font-family: 'Copse', serif;
   align-self: center;
 }
+#overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
+  display: none;
+  color: black;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(255, 255, 255, 0.456);
+  position:absolute;
+  top: 20px;
+  left: 35px;
+  font-weight: bold;
+  text-align: center;
+  font-size: 30px;
+  padding-top: 50%;
+  font-family: 'Delius Swash Caps', cursive;
+}
