--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ input[type=text],input[type=email],#comment{
   }
   #co2{
     width: 100%;
-    margin-left:1 %;
+    margin-left: 1%;
     margin-bottom: 20px;
   }
   #comment{
@@ -104,4 +104,16 @@ input[type=text],input[type=email],#comment{
 #product .title, #development .title, #design .title{
   font-size: 20px;
   font-weight: 600;
+}
+.container {
+  text-align: center;
+}
+.what-we-do{
+  font-family: 'Quattrocento', serif;
+  text-align: center;
+  padding-top: 40px;
+  font-family: 'Gabriela', serif;
+}
+.what-we-do .headings{
+  padding-bottom: 38px;
 }
