--- a/css/styles.css
+++ b/css/styles.css
@@ -121,3 +121,11 @@ input[type=text],input[type=email],#comment{
 .what-we-do .headings{
   padding-bottom: 38px;
 }
+footer{
+  text-align: center;
+  padding-top: 30px;
+  font-family: 'Delius Swash Caps', cursive;
+}
+footer p{
+  margin-top: 10px;
+}
